@@ -10,9 +10,10 @@
 * Adding #351 option to disable automatic tab switching (thanks to Wontell)
 * Adding #357 QSVencC adapt-ref, adapt-ltr, and adapt-qm parameters (thanks to F.O.R.A.R.T.)
 * Adding #368 VCEEncC Pre-Analysis options of sc, ss, activity type, caq, sc qp,lookahead, ltr, paq, taq and motion quality (thanks to Wontell)
-* Adding #410 dispositions for audio tracks (thanks to Don Gafford)
+* Adding #379 #410 dispositions for audio tracks (thanks to markmarz and Don Gafford)
 * Fixing videotoolbox setting panels not having custom_q
 * Fixing end of run command ran after message box was closed instead of before (thanks to sn6op)
+* Fixing changing video or track title did not update the command
 
 ## Version 5.4.1
 
